--- a/Main/Utilities/ComboChips.xaml
+++ b/Main/Utilities/ComboChips.xaml
@@ -1,20 +1,20 @@
 ﻿<UserControl x:Class="Main.Utilities.ComboChips"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Main.Utilities"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             FontSize="15"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" d:DesignHeight="75" d:DesignWidth="250">
+  
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <ComboBox x:Name="cmb" Background="{x:Null}" Grid.Row="0"  ItemsSource="{Binding ComboBoxSource}" 
-                      SelectedItem="{Binding SelectedItem}">
+        <ComboBox  x:Name="cmb" Grid.Row="0" ItemsSource="{Binding ComboBoxSource}" SelectedItem="{Binding SelectedItem}">
             <ComboBox.Style>
-                <Style TargetType="{x:Type ComboBox}">
+                <Style TargetType="{x:Type ComboBox}" >
                     <Style.Triggers>
                         <DataTrigger Binding="{Binding ElementName=ic, Path=Clicked}" Value="True">
                             <Setter Property="IsDropDownOpen"  Value="True"/>
@@ -42,7 +42,7 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-        <ItemsControl x:Name="ic" Background="{x:Null}" Padding="5" BorderBrush="Silver" ItemsSource="{Binding ListBoxSource}">
+        <ItemsControl x:Name="ic" Background="{x:Null}" MinWidth="100" Padding="0" BorderBrush="Silver" ItemsSource="{Binding ListBoxSource}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel  IsItemsHost="True"/>
@@ -50,7 +50,7 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <materialDesign:Chip x:Name="currentChip"  Content="{Binding .}"  IsDeletable="True" DeleteClick="CurrentChip_DeleteClick"></materialDesign:Chip>
+                    <materialDesign:Chip x:Name="currentChip" Margin="2"  Content="{Binding .}"  IsDeletable="True" DeleteClick="CurrentChip_DeleteClick"></materialDesign:Chip>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
